--- a/Part1.ipynb
+++ b/Part1.ipynb
@@ -82,7 +82,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "YOUR ANSWER HERE"
+    "THEATER (TID, Theater, Phone, Location)\n",
+    "MOVIE (_MID, MTitle, Rating)\n",
+    "SHOW (_SID, MID, TID, STime)\n",
+    "ARTIST(_AID_,AName)\n",
+    "CREDIT(_CID,_AID,_MID,CCode)"
    ]
   },
   {
@@ -124,7 +128,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![Movies Tonight ERD](MoviesTonightERD.png)"
+    "![Movies Tonight ERD](MoviesTonightERD.png)\n"
    ]
   },
   {
@@ -152,7 +156,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
